# G19

./: RGB.py  greyscaler.py  image_resize.py  mask_rename.py  maskmerge.py  pipeline.py  pipeline_modular.py  pyproject.toml
