[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "albumentations>=2.0.8",
    "bitsandbytes>=0.48.2",
    "bm3d>=4.0.3",
    "cowsay>=6.1",
    "datasets>=4.4.1",
    "keras>=3.12.0",
    "langchain>=1.0.5",
    "matplotlib>=3.10.7",
    "ollama>=0.6.1",
    "opencv-python>=4.12.0.88",
    "peft>=0.18.0",
    "pip>=25.3",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "trl>=0.25.1",
    "wandb>=0.23.0",
]
